--- a/src/routes/cattell/questionnaire/style.css
+++ b/src/routes/cattell/questionnaire/style.css
@@ -1,3 +1,10 @@
+:root {
+    --card-edge-width: 10vw;
+    --card-gutter: 2vw;
+    --card-edge-gutter: calc(var(--card-gutter) + var(--card-edge-width));
+    --card-width: calc(100vw - var(--card-gutter) * 2 - var(--card-edge-width) * 2);
+}
+
 .cattellQuestionnaire {
     background: #426284;
     /*overflow: hidden;*/
@@ -5,15 +12,22 @@
 
 .cattellStrip {
     display: flex;
-    padding: 1em;
     flex-wrap: nowrap;
     transition: 1s transform ease;
 }
 
 .cattellCard {
     flex: 1 0 auto;
-    width: 60vw;
-    margin: 0 1em;
+    width: var(--card-width);
+    margin: 0 var(--card-gutter);
+}
+
+.cattellCard:first-child {
+    margin-left: var(--card-edge-gutter);
+}
+
+.cattellCard:last-child {
+    margin-right: var(--card-edge-gutter);
 }
 
 .cattellCard h2 {
